Personal-Blog/blog-ku-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: blog-ku
  namespace: blog-ku
spec: {}
status: {}
