Personal-Blog/webapp-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: webapp-middleware
  namespace: blog-ku
spec:
  stripPrefix:
    prefixes:
      - /blog
