Personal-Blog/webapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: blog-ku
  annotations:
    spec.ingressClassName: "traefik"
    traefik.ingress.kubernetes.io/router.middlewares: blog-ku-webapp-middleware@kubernetescrd
spec:
  rules:
    - host: blog.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapp
                port:
                  number: 3000
